opam-version: "2.0"
maintainer: "Frederic Bour <frederic.bour@lakaban.net>"
authors: "Frederic Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/grenier"
bug-reports: "https://github.com/let-def/grenier"
license: "ISC"
dev-repo: "git+https://github.com/let-def/grenier.git"
doc: "https://let-def.github.io/grenier/doc"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "1.2.0"}
]
synopsis: "A collection of various algorithms in OCaml"
description: """
This library implements various datastructures and algorithms:
- automata minimization and transformation to regular expression
- balanced trees
- binpacking
- cardinality estimation (hyperloglog)
- immutable sequences
- jump consistent hashing
- solutions to the order maintenance problem
- ...
"""
