(executable
 (name test)
 (libraries valmari))

(rule
 (deps Lex.dfa)
 (targets Lex.expected)
 (action (with-stdout-to %{targets} (run ./test.exe %{deps}))))

(rule
 (deps Sample.dfa)
 (targets Sample.expected)
 (action (with-stdout-to %{targets} (run ./test.exe %{deps}))))

(rule
 (alias runtest)
 (action (diff Lex.expected Lex.reference)))

(rule
 (alias runtest)
 (action (diff Sample.expected Sample.reference)))
